BuildingsPy Changelog
---------------------

Version 5.2.0, xxxx
^^^^^^^^^^^^^^^^^^^

- In buildingspy/simulate/OpenModelica.py, changed loading of Modelica libraries.
  (https://github.com/lbl-srg/BuildingsPy/issues/586)
- In buildingspy/simulate/base_simulator.py, corrected statement for error reporting.
  (https://github.com/lbl-srg/BuildingsPy/issues/583)
- In buildingspy/development/simulationCompare.py, added option to skip verification of results.
  The default is set to False and hence this change does not affect the behavior of scripts developed
  for previous versions.
  (https://github.com/lbl-srg/BuildingsPy/issues/568)
- In buildingspy/development/merger.py, added new comment form to allow excluding
  Modelica code for certain libraries.
  (https://github.com/lbl-srg/BuildingsPy/issues/566)
- In buildingspy/development/regressiontest.py, add option to create reference
  results in batch mode.
  (https://github.com/lbl-srg/BuildingsPy/issues/560)
- In buildingspy/development/regressiontest.py, add option to get the coverage
  rate, i.e., what percentage of examples are covered by regression tests.
  (https://github.com/lbl-srg/BuildingsPy/issues/253)
- For Optimica regression tests, added check for Integers that are too large to be represented
- In buildingspy/development/refactor.py, corrected moving images to avoid creating
  a directory if the target directory already exists.
  (https://github.com/lbl-srg/BuildingsPy/pull/548)
- In buildingspy/development/validator.py, added method validateHyperlinks()
  that searches for broken hyperlinks.
  (https://github.com/lbl-srg/BuildingsPy/issues/544)
- For Optimica regression tests, added check for connector to itself
  (https://github.com/lbl-srg/BuildingsPy/issues/504)
- In buildingspy/development/refactor.py, updated writing the Modelica
  package.order file to avoid changing the UsersGuide order.
  (https://github.com/lbl-srg/BuildingsPy/issues/541)


Version 5.1.0, April 9, 2024 -- Release 5.1